fix: alignment issue in mobile UI

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     margin: 0;
     padding: 0;
     font-family: "Space Grotesk", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
 }
@@ -180,14 +179,21 @@ input:active {
         min-width: max-content;
 
     }
+    form{
+        width: 420px;
+    }
     .card{
-        width: 84vw;
-        min-height: 260px;
+        width: 360px;
         background-size: cover;
+        margin-left: 0;
 
     }
     #front{
-        margin-top: -17vh;
-        margin-right: 28vw;
+        margin-right: 0;
+        margin-right: 30px;
+        margin-top: -126px;
+    }
+    #back{
+        margin-left: 30px;
     }
 }
